fix: remove unnecessary spacing from all the pages

--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -1,4 +1,4 @@
-.Complete-resume{
+/* .Complete-resume{
   margin-top: 30px;
   padding: 20px;
 }
@@ -87,4 +87,4 @@
 
 
 
-
+ */
